--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,34 @@
     <artifactId>crm-it-school</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.comliper.target>1.8</maven.comliper.target>
+    </properties>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.3</version>
+        </dependency>
+
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
 
 </project>
